--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,6 @@
 .rpsTitle {
     text-align: center;
     padding: 10px;
-    border: 0px solid red;
-    border-radius: 50% 50% 10% 10%;
-    background-color: brown;
 }
 
 .players {
@@ -48,14 +45,30 @@
 
 #buttons {
    text-align: center;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   gap: 20px;
 }
 
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0.7; }
+    100% { opacity: 1; }
+  }
+
 .button {
-    margin: 5px;
+    margin: 10px;
     padding: 20px 10px;
     width: 100px;
+    border-radius: 50%;
+    animation: blink 1s infinite;
 }
 
 .playbutton {
     text-align: center;
+    margin: 30px;
 }
+
+  
+  
